# EMBEDDEED-C-SCHOOL-WORK

./: .gitignore  README.md
PRACS/: .gitignore
PRACS/3.LCD_Keyboard_Timers/: 3.LCD_Keyboard_Timers.c
PRACS/3.LCD_Keyboard_Timers/armgcc/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  cmake_install.cmake
PRACS/3.LCD_Keyboard_Timers/armgcc/release/: 3.LCD_Keyboard_Timers.elf
PRACS/4.LCD-Keyboard-Timers-Interrupts/: 4.LCD_Keyboard_Timers.c  README.md
PRACS/4.LCD-Keyboard-Timers-Interrupts/armgcc/: .ninja_deps  .ninja_log  CMakeLists.txt  armgcc.cmake  build.ninja  cmake_install.cmake  compile_commands.json
PRACS/led_blinker/: led_blinker.c
PRACS/led_blinker/armgcc/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  cmake_install.cmake
PRACS/led_blinker/armgcc/release/: led_blinker.elf
PRACS/robotsito/: robotsito.c
PRACS/robotsito/armgcc/: CMakeLists.txt  build.ninja  cmake_install.cmake
PRACS/tpm_delay/armgcc/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  cmake_install.cmake  mcux_include.json
PRACS/tpm_delay/armgcc/release/: tpm_delay.elf
